<resources>
    <string name="app_name">SmartM</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Correo Electronico</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Inicio de Sesión</string>
    <string name="create_acount">Registrarte</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">Correo invalido</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">Campo requerido</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_pantalla_con_menu">pantallaConMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Usuario</string>
    <string name="nav_header_subtitle">Vehiculo Seleccionado</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <!--
        <string name=""></string>
    -->
    <string name="vehiculo">Moto</string>
    <string name="nuevaMoto">Agregar Moto</string>
    <string name="compartir">Compartir</string>
    <string name="enviar">Enviar</string>
    <string name="comunicacion">Comunicación</string>
    <!--
        Cadenas
    -->
    <string name="llantas_uno">Precion de las llantas</string>
    <string name="llantas_dos">Llanta delantera</string>
    <string name="llantas_tres">Llanta trasera</string>
    <string name="desc_llantas">Estado de las llantas</string>
    <string name="localizacionTXT">Localizacion Actual</string>
    <string name="calendarioTitulo">Calendario de Reparaciones</string>
    <string name="titulo_lista">Lista de chequeo</string>


</resources>
