<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@android:drawable/presence_online"
            android:title="@string/vehiculo"
            android:visible="true" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@android:drawable/presence_online"
            android:title="@string/vehiculo" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@android:drawable/ic_input_add"
            android:title="@string/nuevaMoto" />
    </group>

    <item android:title="@string/comunicacion">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/compartir" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/enviar" />
        </menu>
    </item>

</menu>
